Setting url.search="??" (two questionmarks) has incorrect behavior https://bugs.webkit.org/show_bug.cgi?id=170452

Patch by Rob Buis <rbuis@igalia.com> on 2020-06-28
Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Update improved test result.

* web-platform-tests/url/url-setters-expected.txt:

Source/WebCore:

There is no need to strip leading "?" character since
URLParser expects it to be there. This differs from the
specification algorithm [1], which relies on state override,
which URLParser does not support.

Behavior matches Firefox and Chrome.

Test: imported/w3c/web-platform-tests/url/url-setters.html

[1] https://url.spec.whatwg.org/#dom-url-search

* html/URLDecomposition.cpp:
(WebCore::URLDecomposition::setSearch):

Canonical link: https://commits.webkit.org/226502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263637 268f45cc-cd09-0410-ab3c-d52691b4dbfc